Fix left nav z-index

--- a/source/stylesheets/campo-ui/_left-nav.css.scss
+++ b/source/stylesheets/campo-ui/_left-nav.css.scss
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 1000;
   background: rgba(0, 0, 0, 0.3);
   visibility: hidden;
   opacity: 0;
@@ -16,6 +17,7 @@
   left: 0;
   bottom: 0;
   right: em(56);
+  z-index: 1001;
   max-width: em(304);
   background: white;
   overflow: auto;
